
version history:

v11
- rebuild portals support
- self contained water
- default shape changed by a small version nether portal

v10
- redlamp light fixed (placing fire generates a pulse and lamp gets off)
- split changelog from plugin.yml to this file
- tabtext optimizations (final?)

v9
- custom worlds support, with CHANGES IN CONFIG.YML
- code optimizations

v8
- DROPPED JAVA 6 SUPPORT
- CHANGES IN YML FILES FORMAT, see docuentation in bukkitdev project page
- TabText optimizations

v7
- fix create and destroy portal blocks bugs

v6
- code optimizations
- back to ":" fullname separator (but file still uses ";")
- new list and info output format

v5
- added experience points cost to teleporting (add "xpCost: 5" to config.yml)

v4
- better java 6 compliance

v3
- fixed some color messages

v2
- fixed load portals with empty name
- now uses semicolon as owner;portalName separator

v1
- initial release


todo:

- info any portal
- custom alias
- dynmap support
- permissions
- portal particles
- etc
- suggest your own at bukkit dev page
